# MLAB-I2c-modules

./: README.md  pyproject.toml  requirements.txt
examples/: SDP3x_example.py  lion_gauge_example.py  sht31_example.py
